Deploy changes and init card details
- pm2 config file
- change port to deploy
- inputs UI

- TODO: pagination

--- a/frontend/src/components/incidents/styles.css
+++ b/frontend/src/components/incidents/styles.css
@@ -39,6 +39,15 @@ ul.list-of-incidents li p {
   font-size: 16px;
 }
 
+ul.list-of-incidents li .card-details {
+  color: #e02041;
+  margin-top: 17px;
+  border-top: 1px #a69494 solid;
+  padding-top: 14px;
+  display: flex;
+  justify-content: space-between;
+}
+
 @media only screen and (max-width: 700px) {
     ul.list-of-incidents {
         grid-template-columns: repeat(1, 1fr);
