--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -35,12 +35,13 @@ button {
 
 /* global forms */
 form input {
-    width: 100%;
-    height: 60px;
-    color: #333;
-    border: 1px solid #dcdce6;
-    border-radius: 8px;
-    padding: 0 24px;
+	width: 100%;
+	height: 60px;
+	color: #333;
+	border: 1px solid #dcdce6;
+	border-radius: 8px;
+	padding: 0 24px;
+	font-size: 16px;
 }
 
 form textarea {
