--- a/frontend/src/pages/allIncidents/styles.css
+++ b/frontend/src/pages/allIncidents/styles.css
@@ -5,3 +5,19 @@
 p.well-come {
 	margin-bottom: 31px;
 }
+
+.pagination {
+	display: flex;
+	justify-content: space-between;
+	margin-top: 30px;
+}
+
+.pagination button {
+    border: none;
+    transition: background-color 0.5s;
+    border-radius: 5px;
+}
+
+.pagination button:hover {
+	background-color: #d7d7d7;
+}
